# testci

./: .azure-pipelines.yml.swp  .bumpversion.toml  .gitignore  .junk.py.swp  .pypirc  .script.sh.swp  .tox.ini.swp  README  VERSION  azure-pipelines.yml  azure-pipelines.yml.orig  funds.js  go.sh  go.yaml  junk.py  new_version.sh  pat  push.sh  pyproject.toml  requirements.txt  script.sh  setup.cfg  setup.py  tag_and_push.sh  tox.ini
.github/workflows/: test.yaml
src/UNKNOWN.egg-info/: PKG-INFO  SOURCES.txt
src/bling/: cmdline.py  ring.py  versh.py
src/bling.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: my_test.py
tests/bling/: test_version_holder.py
