[project]
  name="bling"
  dynamic = ["version"]


[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

[tool.setuptools.packages.find]
where = ["src","tests"]  # list of folders that contain the packages (["."] by default)
exclude = ["*tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  
