[metadata]
name = iona-databricks
version = $VERSION
# author = Example Author
# author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    dacite==1.6.0
    aenum==3.1.0
    adal
    requests
    msal
    injector
    prometheus_client
    delta-spark
    jsonpath_ng
python_requires = >=3.6

[options.packages.find]
where = src

[options.package_data]
* = appsettings/*.json

[tool:pytest]

testpaths = tests src/**/tests
